--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ header h1 {
 	background-color: #333;
 	text-align: center;
 }
-h1, #piedPage {
+h1, #piedPage, #piedPage2 {
 	font-size: 1.2em;
 	line-height: 45px;
 }
