--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ h1 #formulaire {
 }
 /* FORMULAIRE DE RESERVATION */
 /* Première lettre en majuscule pour le champs du nom et prénom */ 
-#formGroupExampleInput, #timer {
+#formGroupExampleInput, .nameSignResa {
 	text-transform: capitalize;
 }
 /* Toutes les lettres du champs mail sont en minuscules */ 
@@ -115,9 +115,15 @@ h1 #formulaire {
 	border: 1px solid grey;
 	width: auto;
 	height: 150px;
+	left: 0;
+	margin: auto;
 }
 #btn_resa, #reset {
 	box-shadow: 8px 8px 9px #333;
+}
+.nameSignResa {
+	color: #0E4;
+	font-size: 1.2em;
 }
 /* FOOTER */
 #piedPage {
