--- a/style.css
+++ b/style.css
@@ -72,7 +72,11 @@ header h1 {
 	top: 30px;
 	display: none;
 }
-h1 #formulaire {
+input {
+	color: #333;
+	font-weight: bold;
+}
+#formulaire h1 {
 	font-size: 2.5em;
 }
 #btn_reserver {
